web/src/js/filt/filt.js
/* eslint-disable */
import * as flowutils from "../flow/utils"
export default (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = { type: "other", description: "filter expression" },
        peg$c1 = function(orExpr) { return orExpr; },
        peg$c2 = { type: "other", description: "whitespace" },
        peg$c3 = /^[ \t\n\r]/,
        peg$c4 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c5 = { type: "other", description: "control character" },
        peg$c6 = /^[|&!()~"]/,
        peg$c7 = { type: "class", value: "[|&!()~\"]", description: "[|&!()~\"]" },
        peg$c8 = { type: "other", description: "optional whitespace" },
        peg$c9 = "|",
        peg$c10 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c11 = function(first, second) { return or(first, second); },
        peg$c12 = "&",
        peg$c13 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c14 = function(first, second) { return and(first, second); },
        peg$c15 = "!",
        peg$c16 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c17 = function(expr) { return not(expr); },
        peg$c18 = "(",
        peg$c19 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c20 = ")",
        peg$c21 = { type: "literal", value: ")", description: "\")\"" },
        peg$c22 = function(expr) { return binding(expr); },
        peg$c23 = "~all",
        peg$c24 = { type: "literal", value: "~all", description: "\"~all\"" },
        peg$c25 = function() { return allFilter; },
        peg$c26 = "~agentid",
        peg$c27 = { type: "literal", value: "~agentid", description: "\"~agentid\"" },
        peg$c28 = function(s) { return subagentInstance(s); },
        peg$c29 = "~a",
        peg$c30 = { type: "literal", value: "~a", description: "\"~a\"" },
        peg$c31 = function() { return assetFilter; },
        peg$c32 = "~b",
        peg$c33 = { type: "literal", value: "~b", description: "\"~b\"" },
        peg$c34 = function(s) { return body(s); },
        peg$c35 = "~bq",
        peg$c36 = { type: "literal", value: "~bq", description: "\"~bq\"" },
        peg$c37 = function(s) { return requestBody(s); },
        peg$c38 = "~bs",
        peg$c39 = { type: "literal", value: "~bs", description: "\"~bs\"" },
        peg$c40 = function(s) { return responseBody(s); },
        peg$c41 = "~c",
        peg$c42 = { type: "literal", value: "~c", description: "\"~c\"" },
        peg$c43 = function(s) { return responseCode(s); },
        peg$c44 = "~comment",
        peg$c45 = { type: "literal", value: "~comment", description: "\"~comment\"" },
        peg$c46 = function(s) { return comment(s); },
        peg$c47 = "~d",
        peg$c48 = { type: "literal", value: "~d", description: "\"~d\"" },
        peg$c49 = function(s) { return domain(s); },
        peg$c50 = "~dns",
        peg$c51 = { type: "literal", value: "~dns", description: "\"~dns\"" },
        peg$c52 = function() { return dnsFilter; },
        peg$c53 = "~dst",
        peg$c54 = { type: "literal", value: "~dst", description: "\"~dst\"" },
        peg$c55 = function(s) { return destination(s); },
        peg$c56 = "~e",
        peg$c57 = { type: "literal", value: "~e", description: "\"~e\"" },
        peg$c58 = function() { return errorFilter; },
        peg$c59 = "~h",
        peg$c60 = { type: "literal", value: "~h", description: "\"~h\"" },
        peg$c61 = function(s) { return header(s); },
        peg$c62 = "~hq",
        peg$c63 = { type: "literal", value: "~hq", description: "\"~hq\"" },
        peg$c64 = function(s) { return requestHeader(s); },
        peg$c65 = "~hs",
        peg$c66 = { type: "literal", value: "~hs", description: "\"~hs\"" },
        peg$c67 = function(s) { return responseHeader(s); },
        peg$c68 = "~http",
        peg$c69 = { type: "literal", value: "~http", description: "\"~http\"" },
        peg$c70 = function() { return httpFilter; },
        peg$c71 = "~marked",
        peg$c72 = { type: "literal", value: "~marked", description: "\"~marked\"" },
        peg$c73 = function() { return markedFilter; },
        peg$c74 = "~marker",
        peg$c75 = { type: "literal", value: "~marker", description: "\"~marker\"" },
        peg$c76 = function(s) { return marker(s); },
        peg$c77 = "~m",
        peg$c78 = { type: "literal", value: "~m", description: "\"~m\"" },
        peg$c79 = function(s) { return method(s); },
        peg$c80 = "~q",
        peg$c81 = { type: "literal", value: "~q", description: "\"~q\"" },
        peg$c82 = function() { return noResponseFilter; },
        peg$c83 = "~replayq",
        peg$c84 = { type: "literal", value: "~replayq", description: "\"~replayq\"" },
        peg$c85 = function() { return clientReplayFilter; },
        peg$c86 = "~replays",
        peg$c87 = { type: "literal", value: "~replays", description: "\"~replays\"" },
        peg$c88 = function() { return serverReplayFilter; },
        peg$c89 = "~replay",
        peg$c90 = { type: "literal", value: "~replay", description: "\"~replay\"" },
        peg$c91 = function() { return replayFilter; },
        peg$c92 = "~subagent",
        peg$c93 = { type: "literal", value: "~subagent", description: "\"~subagent\"" },
        peg$c94 = function() { return subagentFilter; },
        peg$c95 = "~src",
        peg$c96 = { type: "literal", value: "~src", description: "\"~src\"" },
        peg$c97 = function(s) { return source(s); },
        peg$c98 = "~s",
        peg$c99 = { type: "literal", value: "~s", description: "\"~s\"" },
        peg$c100 = function() { return responseFilter; },
        peg$c101 = "~tcp",
        peg$c102 = { type: "literal", value: "~tcp", description: "\"~tcp\"" },
        peg$c103 = function() { return tcpFilter; },
        peg$c104 = "~udp",
        peg$c105 = { type: "literal", value: "~udp", description: "\"~udp\"" },
        peg$c106 = function() { return udpFilter; },
        peg$c107 = "~tq",
        peg$c108 = { type: "literal", value: "~tq", description: "\"~tq\"" },
        peg$c109 = function(s) { return requestContentType(s); },
        peg$c110 = "~ts",
        peg$c111 = { type: "literal", value: "~ts", description: "\"~ts\"" },
        peg$c112 = function(s) { return responseContentType(s); },
        peg$c113 = "~t",
        peg$c114 = { type: "literal", value: "~t", description: "\"~t\"" },
        peg$c115 = function(s) { return contentType(s); },
        peg$c116 = "~u",
        peg$c117 = { type: "literal", value: "~u", description: "\"~u\"" },
        peg$c118 = function(s) { return url(s); },
        peg$c119 = "~websocket",
        peg$c120 = { type: "literal", value: "~websocket", description: "\"~websocket\"" },
        peg$c121 = function() { return websocketFilter; },
        peg$c122 = { type: "other", description: "integer" },
        peg$c123 = /^['"]/,
        peg$c124 = { type: "class", value: "['\"]", description: "['\"]" },
        peg$c125 = /^[0-9]/,
        peg$c126 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c127 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c128 = { type: "other", description: "string" },
        peg$c129 = "\"",
        peg$c130 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c131 = function(chars) { return chars.join(""); },
        peg$c132 = "'",
        peg$c133 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c134 = /^["\\]/,
        peg$c135 = { type: "class", value: "[\"\\\\]", description: "[\"\\\\]" },
        peg$c136 = { type: "any", description: "any character" },
        peg$c137 = function(char) { return char; },
        peg$c138 = "\\",
        peg$c139 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c140 = /^['\\]/,
        peg$c141 = { type: "class", value: "['\\\\]", description: "['\\\\]" },
        peg$c142 = /^['"\\]/,
        peg$c143 = { type: "class", value: "['\"\\\\]", description: "['\"\\\\]" },
        peg$c144 = "n",
        peg$c145 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c146 = function() { return "\n"; },
        peg$c147 = "r",
        peg$c148 = { type: "literal", value: "r", description: "\"r\"" },
        peg$c149 = function() { return "\r"; },
        peg$c150 = "t",
        peg$c151 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c152 = function() { return "\t"; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseOrExpr();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c0); }
      }

      return s0;
    }

    function peg$parsews() {
      var s0, s1;

      peg$silentFails++;
      if (peg$c3.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }

      return s0;
    }

    function peg$parsecc() {
      var s0, s1;

      peg$silentFails++;
      if (peg$c6.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }

      return s0;
    }

    function peg$parse__() {
      var s0, s1;

      peg$silentFails++;
      s0 = [];
      s1 = peg$parsews();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parsews();
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }

      return s0;
    }

    function peg$parseOrExpr() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseAndExpr();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 124) {
            s3 = peg$c9;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseOrExpr();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c11(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseAndExpr();
      }

      return s0;
    }

    function peg$parseAndExpr() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseNotExpr();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 38) {
            s3 = peg$c12;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseAndExpr();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c14(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseNotExpr();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parsews();
          if (s3 !== peg$FAILED) {
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              s3 = peg$parsews();
            }
          } else {
            s2 = peg$FAILED;
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parseAndExpr();
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c14(s1, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parseNotExpr();
        }
      }

      return s0;
    }

    function peg$parseNotExpr() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 33) {
        s1 = peg$c15;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNotExpr();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c17(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseBindingExpr();
      }

      return s0;
    }

    function peg$parseBindingExpr() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c18;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseOrExpr();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c20;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c21); }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c22(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseExpr();
      }

      return s0;
    }

    function peg$parseExpr() {
      var s0, s1, s2, s3;
